--- a/index.html
+++ b/index.html
@@ -10,7 +10,30 @@
 
       
       <!--Your web app's Firebase configuration
-         Add here
+         <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyDilFKvPtXDSGWpY12ii5fK2CD-R2783d0",
+    authDomain: "virtual-pet-d8121.firebaseapp.com",
+    databaseURL: "https://virtual-pet-d8121-default-rtdb.firebaseio.com",
+    projectId: "virtual-pet-d8121",
+    storageBucket: "virtual-pet-d8121.appspot.com",
+    messagingSenderId: "762609496444",
+    appId: "1:762609496444:web:8f7e237aa2f9c1281234f9",
+    measurementId: "G-KWK3E861R8"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
         Initialize Firebase-->
 
       <link rel="stylesheet" type="text/css" href="style.css"/>
